--- a/app/src/at-uyennguyen/AndroidManifest.xml
+++ b/app/src/at-uyennguyen/AndroidManifest.xml
@@ -9,7 +9,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".layoutandroid.LayoutAndroidActivity">
+        <activity android:name=".canvas.CanvasActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
